# textinfo

./: LICENSE  README.md  languageFamilies.json  pyproject.toml
Python/: CharCount.py  charfreq.py  transliterate.py
Test/: out.txt
notebooks/: copy_with_dir.ipynb  get_translated_verse.ipynb  org_local_drives.ipynb
python/: Assignment_problem.py  GitHub.code-workspace  Sami_to_sfm.py  add_rem_to_sfm.py  aggregate_scores.py  bleu.py  change_ext.py  change_filenames.py  change_filenames2.py  character_report.csv  character_summary.csv  charfreq.py  charfreq_2.py  check_books.py  chinese_script.py  clean_projects.py  clean_projects2.py  clean_projects2_2.py  clean_projects3.py  clean_projects3_2.py  clean_projects5.py  clean_projects6.py  cncharlists.py  combine_scores.py  combine_scores_dict.py  combine_two_files.py  compare_corpus.py  compare_corpus2.py  compare_corpus3.py  convert_tbta_tnd.py  copy_experiments.py  copy_folders_and_files.py  copy_folders_and_filesGPT.py  copy_with_dir.py  count_stutters.py  count_stutters_restartable.py  count_stutters_stats.py  create_series_from_config.py  create_series_from_config2.py  create_series_from_config4.py  (+55 more)
test/: Ask ChatGPT for typing hints.txt  Bible_book_characterisations.txt  ChatGPT Answer with typing hints.txt  ExtractNames.xlsx  chinese_char.txt  chinese_test.txt  mbt_names.tsv  name_details.csv  name_pairs.csv  name_pairs_summary.csv  names_by_ref.txt  out.csv  source_language_names_from_All_metadata.tsv
test/bibles1/: blx-AMIU_2022_04_19.txt  tl-AMIBT_2022_04_19.txt
test/compare_bibles/: cache.csv
