[tool.poetry]
name = "textinfo"
version = "0.1.0"
description = "Text info"
authors = ["David Baines <david_baines@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.43"
toml = "^0.10.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
