[tool.poetry]
name = "textinfo"
version = "0.1.0"
description = "\"Text file utilities\""
authors = ["David Baines <david_baines@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.23.1"
sentencepiece = "^0.1.97"
sacremoses = "^0.0.53"
huggingface-hub = "^0.10.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
black = "^22.10.0"
datasets = "^2.7.0"
natsort = "^8.2.0"
boto3 = "^1.26.23"
docx = "^0.2.4"
pyyaml = "^6.0"
pywin32 = "^306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
