[tool.poetry]
name = "textinfo"
version = "0.1.0"
description = "Text info"
authors = ["David Baines <david_baines@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.57"
datasets = "^2.7.0"
docx = "^0.2.4"
hanzidentifier = "^1.2.0"
huggingface-hub = "^0.10.1"
natsort = "^8.2.0"
nltk = "^3.9"
numpy = "^1.19.2"
prompt-toolkit = "^3.0.43"
pyyaml = "^6.0.1"
scipy = "^1.3.2"
sentencepiece = "^0.1.97"
sacremoses = "^0.0.53"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
toml = "^0.10.2"
transformers = "^4.23.1"
odfpy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
