[tool.poetry]
name = "textinfo"
version = "0.1.0"
description = "My scripts"
authors = ["David Baines <david_baines@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.57"
pyyaml = "^6.0.1"
nltk = "^3.8.1"
odfpy = "^1.4.1"
hanzidentifier = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
